--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@ngxs/devtools-plugin": "^3.8.1",
+    "@ngxs/logger-plugin": "^3.8.1-dev.master-98beeea",
+    "@ngxs/store": "^3.8.1-dev.master-98beeea",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
