--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngxs/devtools-plugin": "^3.8.1",
     "@ngxs/logger-plugin": "^3.8.1-dev.master-98beeea",
     "@ngxs/store": "^3.8.1-dev.master-98beeea",
+    "font-awesome": "^4.7.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
