add login feature with routing and all the requirements from the best practice

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -68,6 +68,7 @@
         "@typescript-eslint/no-empty-function": "error",
         "@typescript-eslint/no-extra-non-null-assertion": "error",
         "@typescript-eslint/no-for-in-array": "error",
+        "@typescript-eslint/no-floating-promises": "error",
         "@typescript-eslint/no-implied-eval": "error",
         "@typescript-eslint/no-inferrable-types": "error",
         "@typescript-eslint/no-extra-parens": [
@@ -203,7 +204,8 @@
             ],
             "format": [
               "camelCase"
-            ]
+            ],
+            "leadingUnderscore": "require"
           },
           {
             "selector": [
