--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,24 +4,48 @@
   "overrides": [
     {
       "files": ["*.ts"],
+      "parser": "@typescript-eslint/parser",
       "parserOptions": {
         "project": ["tsconfig.json"],
         "createDefaultProgram": true,
         "ecmaVersion": "latest"
       },
-      "env": {
-        "es6": true
-      },
+      "plugins": ["sonarjs"],
       "extends": [
-        "eslint:recommended",
         "plugin:@typescript-eslint/recommended",
-        "plugin:@angular-eslint/recommended",
-        "plugin:@angular-eslint/template/process-inline-templates",
-        "plugin:prettier/recommended"
+        "plugin:@angular-eslint/all",
+        "plugin:@angular-eslint/template/process-inline-templates"
       ],
       "rules": {
         "curly": ["error", "multi-line"],
         "no-console": "warn",
+        "eqeqeq": ["error", "always", { "null": "ignore" }],
+        "lines-between-class-members": [
+          "error",
+          "always",
+          { "exceptAfterSingleLine": true }
+        ],
+        "padding-line-between-statements": [
+          "error",
+          {
+            "blankLine": "always",
+            "prev": "*",
+            "next": ["function", "block", "block-like", "return", "break"]
+          },
+          { "blankLine": "always", "prev": ["const", "let"], "next": "*" },
+          { "blankLine": "always", "prev": "*", "next": ["const", "let"] },
+          {
+            "blankLine": "any",
+            "prev": ["const", "let"],
+            "next": ["const", "let"]
+          },
+          { "blankLine": "always", "prev": "directive", "next": "*" },
+          { "blankLine": "any", "prev": "directive", "next": "directive" },
+          { "blankLine": "always", "prev": ["case", "default"], "next": "*" },
+          { "blankLine": "always", "prev": "import", "next": "*" },
+          { "blankLine": "any", "prev": "import", "next": "import" }
+        ],
+
         // Typescript
         "@typescript-eslint/adjacent-overload-signatures": "warn",
         "@typescript-eslint/await-thenable": "error",
@@ -32,9 +56,7 @@
         "@typescript-eslint/dot-notation": "warn",
         "@typescript-eslint/explicit-function-return-type": [
           "error",
-          {
-            "allowExpressions": true
-          }
+          { "allowExpressions": true }
         ],
         "@typescript-eslint/explicit-member-accessibility": [
           "error",
@@ -48,6 +70,7 @@
         "@typescript-eslint/explicit-module-boundary-types": "error",
         "func-call-spacing": "off",
         "@typescript-eslint/func-call-spacing": "error",
+
         "@typescript-eslint/method-signature-style": ["error", "method"],
         "no-array-constructor": "off",
         "@typescript-eslint/no-array-constructor": "error",
@@ -57,8 +80,8 @@
         "no-empty-function": "off",
         "@typescript-eslint/no-empty-function": "error",
         "@typescript-eslint/no-extra-non-null-assertion": "error",
-        "@typescript-eslint/no-for-in-array": "error",
         "@typescript-eslint/no-floating-promises": "error",
+        "@typescript-eslint/no-for-in-array": "error",
         "@typescript-eslint/no-implied-eval": "error",
         "@typescript-eslint/no-inferrable-types": "error",
         "@typescript-eslint/no-extra-parens": ["error", "functions"],
@@ -69,9 +92,7 @@
         "@typescript-eslint/no-misused-new": "error",
         "@typescript-eslint/no-misused-promises": [
           "error",
-          {
-            "checksVoidReturn": false
-          }
+          { "checksVoidReturn": false }
         ],
         "@typescript-eslint/no-namespace": "error",
         "@typescript-eslint/no-non-null-asserted-nullish-coalescing": "error",
@@ -94,16 +115,12 @@
         "no-unused-expressions": "off",
         "@typescript-eslint/no-unused-expressions": [
           "error",
-          {
-            "allowShortCircuit": true
-          }
+          { "allowShortCircuit": true }
         ],
         "no-unused-vars": "off",
         "@typescript-eslint/no-unused-vars": [
           "error",
-          {
-            "argsIgnorePattern": "_"
-          }
+          { "argsIgnorePattern": "_" }
         ],
         "no-useless-constructor": "off",
         "@typescript-eslint/no-useless-constructor": "error",
@@ -130,12 +147,7 @@
         "@typescript-eslint/restrict-template-expressions": "error",
         "no-return-await": "off",
         "@typescript-eslint/return-await": ["error", "never"],
-        "space-before-function-paren": [
-          "error",
-          {
-            "named": "never"
-          }
-        ],
+        "space-before-function-paren": ["error", { "named": "never" }],
         "space-infix-ops": "off",
         "@typescript-eslint/space-infix-ops": "error",
         "@typescript-eslint/switch-exhaustiveness-check": "warn",
@@ -143,9 +155,7 @@
         "@typescript-eslint/unified-signatures": "error",
         "@typescript-eslint/array-type": [
           "error",
-          {
-            "default": "array-simple"
-          }
+          { "default": "array-simple" }
         ],
         "@typescript-eslint/ban-ts-comment": [
           "error",
@@ -157,25 +167,7 @@
             "minimumDescriptionLength": 30
           }
         ],
-        "@typescript-eslint/ban-types": [
-          "error",
-          {
-            "types": {
-              "Object": {
-                "message": "The `Object` type actually means \"any non-nullish value\", so it is marginally better than `unknown`., \n- If you want a type meaning \"any object\", you probably want `Record<string, unknown>` instead, \n- If you want a type meaning \"any value\", you probably want `unknown` instead.",
-                "fixWith": "Record<string, unknown>"
-              },
-              "{}": {
-                "message": "The `{}` type actually means \"any non-nullish value\", so it is marginally better than `unknown`., \n- If you want a type meaning \"any object\", you probably want `Record<string, unknown>` instead, \n- If you want a type meaning \"any value\", you probably want `unknown` instead.",
-                "fixWith": "Record<string, unknown>"
-              },
-              "Function": {
-                "message": "Use `() => unknown` or explicit function shape instead",
-                "fixWith": "() => unknown"
-              }
-            }
-          }
-        ],
+        "@typescript-eslint/ban-types": "off",
         "@typescript-eslint/naming-convention": [
           "error",
           {
@@ -193,16 +185,66 @@
         ],
         "@typescript-eslint/no-empty-interface": [
           "error",
-          {
-            "allowSingleExtends": false
-          }
+          { "allowSingleExtends": false }
         ],
         "@typescript-eslint/no-explicit-any": [
           "error",
+          { "fixToUnknown": true }
+        ],
+
+        "@typescript-eslint/member-ordering": [
+          "error",
           {
-            "fixToUnknown": true
+            "default": [
+              // Index signature
+              "signature",
+              "call-signature",
+
+              // Fields
+              "public-abstract-field",
+              "public-static-field",
+              "public-field",
+
+              "protected-abstract-field",
+              "protected-static-field",
+              "protected-field",
+
+              "private-static-field",
+              "private-field",
+
+              "abstract-field",
+              "static-field",
+              "field",
+
+              // Static initialization
+              "static-initialization",
+
+              // Constructors
+              "constructor",
+
+              // Methods
+              "public-abstract-method",
+              "public-static-method",
+              "public-instance-method",
+              "public-method",
+
+              "protected-abstract-method",
+              "protected-static-method",
+              "protected-instance-method",
+              "protected-method",
+
+              "private-static-method",
+              "#private-static-method",
+              "private-instance-method",
+              "#private-instance-method",
+              "private-method",
+              "#private-method",
+
+              "method"
+            ]
           }
         ],
+
         // Angular
         "@angular-eslint/no-pipe-impure": "warn",
         "@angular-eslint/no-empty-lifecycle-method": "off",
@@ -216,47 +258,50 @@
         "@angular-eslint/no-forward-ref": "off",
         "@angular-eslint/directive-selector": [
           "warn",
-          {
-            "type": "attribute",
-            "style": "kebab-case"
-          }
+          { "type": "attribute", "style": "kebab-case" }
         ],
         "@angular-eslint/component-selector": [
           "warn",
-          {
-            "prefix": ["app", "vlt"],
-            "style": "kebab-case"
-          }
+          { "prefix": ["app", "vlt"], "style": "kebab-case" }
         ],
         "@angular-eslint/component-max-inline-declarations": [
           "error",
-          {
-            "template": 1
-          }
+          { "template": 1 }
         ],
         "@angular-eslint/no-input-prefix": [
           "error",
-          {
-            "prefixes": ["on", "is", "has", "had", "was", "been"]
+          { "prefixes": ["on", "is", "has", "had", "was", "been"] }
+        ],
+
+        // Sonar
+        "sonarjs/no-duplicate-string": "off"
+      },
+      "overrides": [
+        {
+          "files": ["*.spec.ts"],
+          "parserOptions": { "project": ["tsconfig.spec.json"] },
+          "rules": {
+            "padding-line-between-statements": [
+              "error",
+              {
+                "blankLine": "any",
+                "prev": ["const", "let"],
+                "next": ["const", "let"]
+              }
+            ],
+            "@angular-eslint/component-max-inline-declarations": "off"
           }
-        ]
-      }
+        }
+      ]
     },
     {
       "files": ["*.html"],
-      "excludedFiles": ["*inline-template-*.component.html"],
-      "extends": [
-        "plugin:@angular-eslint/template/recommended",
-        "plugin:@angular-eslint/template/accessibility",
-        "plugin:prettier/recommended"
-      ],
+      "extends": ["plugin:@angular-eslint/template/all"],
       "rules": {
         "@angular-eslint/template/no-negated-async": "off",
         "@angular-eslint/template/eqeqeq": [
           "error",
-          {
-            "allowNullOrUndefined": true
-          }
+          { "allowNullOrUndefined": true }
         ],
         "@angular-eslint/template/no-any": "off",
         "@angular-eslint/template/click-events-have-key-events": "warn",
@@ -266,17 +311,9 @@
         "@angular-eslint/template/cyclomatic-complexity": "off",
         "@angular-eslint/template/conditional-complexity": [
           "warn",
-          {
-            "maxComplexity": 3
-          }
+          { "maxComplexity": 3 }
         ],
-        "@angular-eslint/template/no-inline-styles": "off",
-        "prettier/prettier": [
-          "error",
-          {
-            "parser": "angular"
-          }
-        ]
+        "@angular-eslint/template/no-inline-styles": "off"
       }
     }
   ]
