--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@ngxs/logger-plugin": "^3.8.1-dev.master-98beeea",
     "@ngxs/store": "^3.8.1-dev.master-98beeea",
     "await-to-js": "^3.0.0",
+    "eslint-plugin-sonarjs": "^0.23.0",
     "font-awesome": "^4.7.0",
+    "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
