--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ngxs/store": "^3.8.1-dev.master-98beeea",
     "await-to-js": "^3.0.0",
     "eslint-plugin-sonarjs": "^0.23.0",
+    "flowbite": "^2.3.0",
     "font-awesome": "^4.7.0",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
